<resources>
    <string name="app_name">F1 Results</string>
    <string name="home_title">Home</string>
    <string name="current_season_title">Current Season</string>
    <string name="result_title">Result</string>
    <string name="results_title">Results</string>
    <string name="historical_season_title">Historical Season</string>
    <string name="drivers_title">Drivers</string>
    <string name="constructors_title">Constructors</string>
    <string name="circuits_title">Circuits</string>
    <string name="settings_title">Settings</string>

    <string name="next_gp_label">Next GP</string>
    <string name="next_gp_void_title">All the Grand Prix of this season have already been disputed</string>
    <string name="next_gp_void_subtitle">Until next year!</string>
    <string name="lasts_gp_label">Latest Results</string>
    <string name="latest_results_winner">Winner %1$s</string>


    <string name="drivers">Drivers</string>
    <string name="constructors">Constructors</string>

    <string name="qualifying_label">Qualifying</string>
    <string name="race_label">Race</string>

    <string name="position_text">%1$sº</string>
    <string name="points_added">+%1$spts</string>
    <string name="points_earned">%1$s pts</string>
    <string name="points_gap">-%1$s pts</string>
    <string name="pitstops_done">Pitstops %1$s</string>
    <string name="laps_done">Laps %1$s</string>
    <string name="number_of_wins">Wins %1$s</string>

    <!-- FINISHING STATUS -->
    <string name="oil_leak">Oil leak problem</string>
    <string name="disqualified">Disqualified</string>
    <string name="accident">Accident</string>
    <string name="collision">Collision</string>
    <string name="engine">Engine problem</string>
    <string name="gearbox">Gearbox problem</string>
    <string name="transmission">Transmission problem</string>
    <string name="clutch">Clutch problem</string>
    <string name="hydraulics">Hydraulic problem</string>
    <string name="electrical">Electrical problem</string>
    <string name="spun_off">Spun off</string>
    <string name="radiator">Radiator problem</string>
    <string name="suspension">Suspension problem</string>
    <string name="brakes">Brakes problem</string>
    <string name="differential">Differential problem</string>
    <string name="overheating">Overheating problem</string>
    <string name="mechanical">Mechanical problem</string>
    <string name="tyre">Tyre problem</string>
    <string name="driver_seat">Driver Seat problem</string>
    <string name="puncture">Puncture</string>
    <string name="driveshaft">Driveshaft problem</string>

    <string name="no_constructor_standing">This season there was still no constructors world championship</string>

    <string name="no_qualifying_data">No hay datos sobre la clasificación</string>

    <string name="number_races_in_contructor">%1$s GP</string>
    <string name="number_years_in_contructor">%1$s seasons</string>

    <string name="last_winners_label">Last winners</string>
    <string name="most_wins_label">More wins</string>

</resources>
