<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home_title" />
    </group>

    <group android:id="@+id/ranks" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current_season"
            android:title="@string/current_season_title" />
        <item
            android:id="@+id/nav_past_season"
            android:title="@string/historical_season_title" />
    </group>

    <group
        android:id="@+id/info"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drivers"
            android:title="@string/drivers_title" />

        <item
            android:id="@+id/nav_constructors"
            android:title="@string/constructors_title" />

        <item
            android:id="@+id/nav_circuits"
            android:title="@string/circuits_title" />
    </group>

</menu>